CustomerOrderInfra/Modules/security_groups/js_sg/js_sg.tf
resource "aws_security_group" "js_sg" {
  name        = "${var.project}_${var.environment}_Jenkins_sg"
  description = "Allow SSH HTTP and HTTPS traffic"
  vpc_id      = "${var.vpc_id}"

	#allow SSH connectivity
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #allow HTTPS connectivity
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #allow HTTP connectivity
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #allow HTTP connectivity
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #allow NFS connectivity
  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

	#allow all outgoing traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
      Name = "${var.project}_${var.environment}_NAT_Security_Group"
      Owner = "${var.owner}"
      Environment = "${var.environment}"
      Project = "${var.project}"
  }
}
